unpackaged/main/default/objects/InsurancePolicy/fields/Acceptable_Trade__c.field-meta.xml
<CustomField>
    <fullName>Acceptable_Trade__c</fullName>
    <label>Acceptable Trade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>