unpackaged/main/default/objects/InsurancePolicy/fields/Additional_Return_Premium__c.field-meta.xml
<CustomField>
    <fullName>Additional_Return_Premium__c</fullName>
    <inlineHelpText>Was it return or additional charge?</inlineHelpText>
    <label>Additional/Return Premium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>