unpackaged/main/default/objects/InsurancePolicy/fields/Affinity__c.field-meta.xml
<CustomField>
    <fullName>Affinity__c</fullName>
    <description>The Brand the policy is sold under eg. Toolbox, Admiral Business etc.</description>
    <inlineHelpText>The Brand the policy is sold under eg. Toolbox, Admiral Business etc.</inlineHelpText>
    <label>Affinity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admiral Business</fullName>
            </value>
            <value>
                <fullName>Thomas Carroll</fullName>
            </value>
            <value>
                <fullName>Toolbox by Admiral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>