unpackaged/main/default/objects/InsurancePolicy/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>This stores the  granular detail on what type business type insurance policy covers. 

Accounts with Limited Company record type can only have Limited Company business type.
Accounts with Individual record type can have one of the following - employed, self employed or partnership. 

As time goes by the above may change - this is true as of 11th July 2024.</description>
    <inlineHelpText>What type of entity is being insured under this Insurance Policy</inlineHelpText>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Self Employed</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>