unpackaged/main/default/objects/InsurancePolicy/fields/Call_Back_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Arrangement__c</fullName>
    <label>Call Back Arrangement</label>
    <type>DateTime</type>
</CustomField>