unpackaged/main/default/objects/InsurancePolicy/fields/Cancellation_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Created_Date__c</fullName>
    <label>Cancellation Created Date</label>
    <type>DateTime</type>
</CustomField>