unpackaged/main/default/objects/InsurancePolicy/fields/Cancellation_Return_Premium__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Return_Premium__c</fullName>
    <label>Cancellation Return Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>