unpackaged/main/default/objects/InsurancePolicy/fields/Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Status__c</fullName>
    <description>Calculated by data job from couple reports and outcome pushed into SF. Expected values at the time of creating this field are below:
&#39;Card expired&#39;
&#39;Valid card on file&#39;
&#39;Card excluded from reuse &amp; Expired&#39;
&#39;Card excluded from reuse&#39;
&#39;No card on file&#39;</description>
    <label>Card Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>