unpackaged/main/default/objects/InsurancePolicy/fields/Consent_to_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to mark policies where the customer consented to be auto-renewed.</description>
    <inlineHelpText>Did customer consent to auto-renew this policy?</inlineHelpText>
    <label>Consent to Auto-Renew</label>
    <type>Checkbox</type>
</CustomField>