unpackaged/main/default/objects/InsurancePolicy/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <description>Related Contact record Id</description>
    <formula>Insured_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactId</label>
    <type>Text</type>
</CustomField>