unpackaged/main/default/objects/InsurancePolicy/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <formula>NameInsured.Name</formula>
    <label>ContactName</label>
    <type>Text</type>
</CustomField>