unpackaged/main/default/objects/InsurancePolicy/fields/Contract_Works_Cover__c.field-meta.xml
<CustomField>
    <fullName>Contract_Works_Cover__c</fullName>
    <label>Contract Works Cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>