unpackaged/main/default/objects/InsurancePolicy/fields/Cover_Type__c.field-meta.xml
<CustomField>
    <fullName>Cover_Type__c</fullName>
    <label>Cover Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>