unpackaged/main/default/objects/InsurancePolicy/fields/DurationEnd__c.field-meta.xml
<CustomField>
    <fullName>DurationEnd__c</fullName>
    <label>Duration End</label>
    <type>DateTime</type>
</CustomField>