unpackaged/main/default/objects/InsurancePolicy/fields/Effective_Date_formula__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_formula__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL($User.TimeZoneSidKey, &#39;Europe/London&#39;),
        OriginalEffectiveDate &gt;= DATETIMEVALUE(TEXT(YEAR(DATEVALUE(OriginalEffectiveDate))) &amp; &quot;-03-21 00:00:00&quot;),
        OriginalEffectiveDate &lt; DATETIMEVALUE(TEXT(YEAR(DATEVALUE(OriginalEffectiveDate))) &amp; &quot;-10-27 00:00:00&quot;)
    ), 
    OriginalEffectiveDate - (1/24), 
    OriginalEffectiveDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>