unpackaged/main/default/objects/InsurancePolicy/fields/Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email opt in for marketing and promotions</description>
    <label>Email Opt In</label>
    <type>Checkbox</type>
</CustomField>