unpackaged/main/default/objects/InsurancePolicy/fields/Employers_Liability__c.field-meta.xml
<CustomField>
    <fullName>Employers_Liability__c</fullName>
    <label>Employers Liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>