unpackaged/main/default/objects/InsurancePolicy/fields/Expiration_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_Formula__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL($User.TimeZoneSidKey, &#39;Europe/London&#39;),
        ExpirationDate &gt;= DATETIMEVALUE(TEXT(YEAR(DATEVALUE(ExpirationDate))) &amp; &quot;-03-21 00:00:00&quot;),
        ExpirationDate &lt; DATETIMEVALUE(TEXT(YEAR(DATEVALUE(ExpirationDate))) &amp; &quot;-10-27 00:00:00&quot;)
    ), 
    ExpirationDate - (1/24), 
    ExpirationDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>