unpackaged/main/default/objects/InsurancePolicy/fields/Failed_to_Renew__c.field-meta.xml
<CustomField>
    <fullName>Failed_to_Renew__c</fullName>
    <description>This formula looks at multiple fields on the record to determine if policy failed to renew</description>
    <formula>AND(

    ISPICKVAL( Status , &quot;In The Renewal Cycle&quot;),
    Auto_Renewal__c = TRUE,
    Consent_to_Auto_Renew__c = TRUE,
    (DATEVALUE(RenewalDate) - TODAY())&lt;8,
    (DATEVALUE(RenewalDate) - TODAY())&gt;0



)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This policy failed to renew</inlineHelpText>
    <label>Failed to Renew</label>
    <type>Checkbox</type>
</CustomField>