unpackaged/main/default/objects/InsurancePolicy/fields/FailedRenewalCaseCreated__c.field-meta.xml
<CustomField>
    <fullName>FailedRenewalCaseCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked to true by flow, when Failed Payment record type case is created.</description>
    <label>FailedRenewalCaseCreated</label>
    <type>Checkbox</type>
</CustomField>