unpackaged/main/default/objects/InsurancePolicy/fields/Has_Car__c.field-meta.xml
<CustomField>
    <fullName>Has_Car__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a policy has Car vehicle</description>
    <label>Has Car</label>
    <type>Checkbox</type>
</CustomField>