unpackaged/main/default/objects/InsurancePolicy/fields/Has_Van__c.field-meta.xml
<CustomField>
    <fullName>Has_Van__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a policy has Van vehicle</description>
    <label>Has Van</label>
    <type>Checkbox</type>
</CustomField>