unpackaged/main/default/objects/InsurancePolicy/fields/Hired_In_Plant_Cover__c.field-meta.xml
<CustomField>
    <fullName>Hired_In_Plant_Cover__c</fullName>
    <label>Hired In Plant Cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>