unpackaged/main/default/objects/InsurancePolicy/fields/Instanda_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Instanda_Policy_Number__c</fullName>
    <externalId>true</externalId>
    <label>Instanda Policy Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>