unpackaged/main/default/objects/InsurancePolicy/fields/Insurance_Premium_Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Premium_Tax_Percentage__c</fullName>
    <label>Insurance Premium Tax Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>