unpackaged/main/default/objects/InsurancePolicy/fields/Insured_Contact__c.field-meta.xml
<CustomField>
    <fullName>Insured_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The main contact related to the Name Insured on the Insurance Policy</description>
    <label>Insured Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurance Policies</relationshipLabel>
    <relationshipName>Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>