unpackaged/main/default/objects/InsurancePolicy/fields/Is_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Is_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Renewal</label>
    <type>Checkbox</type>
</CustomField>