unpackaged/main/default/objects/InsurancePolicy/fields/Legal_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Legal_Expenses__c</fullName>
    <description>Legal Expenses Limit of Indemnity
CDL fields: work out from both OPTIONAL_EXTRA_CODE &amp;
OPTIONALEXTRASTATUS_CODE</description>
    <inlineHelpText>Legal Expenses Limit of Indemnity</inlineHelpText>
    <label>Legal Expenses</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>