unpackaged/main/default/objects/InsurancePolicy/fields/LIABWHER__c.field-meta.xml
<CustomField>
    <fullName>LIABWHER__c</fullName>
    <label>LIABWHER</label>
    <length>200</length>
    <type>Text</type>
</CustomField>