unpackaged/main/default/objects/InsurancePolicy/fields/MTA_Premium__c.field-meta.xml
<CustomField>
    <fullName>MTA_Premium__c</fullName>
    <description>The monetary impact MTA had on the policy</description>
    <inlineHelpText>Cost for this change</inlineHelpText>
    <label>MTA Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>