unpackaged/main/default/objects/InsurancePolicy/fields/NonAutoRenewalOppFlagged__c.field-meta.xml
<CustomField>
    <fullName>NonAutoRenewalOppFlagged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a flag to tell scheduled flow that opportunity was found and updated, so when it runs the following day, those records are excluded and it doesnt run again on those records.</description>
    <label>NonAutoRenewalOppFlagged</label>
    <type>Checkbox</type>
</CustomField>