unpackaged/main/default/objects/InsurancePolicy/fields/Occupation_Adjustment_Factor__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Adjustment_Factor__c</fullName>
    <label>Occupation Adjustment Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>