unpackaged/main/default/objects/InsurancePolicy/fields/OriginalEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalEffectiveDate__c</fullName>
    <inlineHelpText>Original Policy Inception date</inlineHelpText>
    <label>Original Effective Date</label>
    <type>Date</type>
</CustomField>