unpackaged/main/default/objects/InsurancePolicy/fields/Own_Plant_Cover__c.field-meta.xml
<CustomField>
    <fullName>Own_Plant_Cover__c</fullName>
    <label>Own Plant Cover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>