unpackaged/main/default/objects/InsurancePolicy/fields/Policy_Term_Start_Date_formula__c.field-meta.xml
<CustomField>
    <fullName>Policy_Term_Start_Date_formula__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL($User.TimeZoneSidKey, &#39;Europe/London&#39;),
        PolicyTermStartDate__c &gt;= DATETIMEVALUE(TEXT(YEAR(DATEVALUE(PolicyTermStartDate__c))) &amp; &quot;-03-21 00:00:00&quot;),
        PolicyTermStartDate__c &lt; DATETIMEVALUE(TEXT(YEAR(DATEVALUE(PolicyTermStartDate__c))) &amp; &quot;-10-27 00:00:00&quot;)
    ), 
    PolicyTermStartDate__c - (1/24), 
    PolicyTermStartDate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Term Start Date</label>
    <type>DateTime</type>
</CustomField>