unpackaged/main/default/objects/InsurancePolicy/fields/PolicyTermStartDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyTermStartDate__c</fullName>
    <description>Date the policy term commenced
CDL field: STARTDATE</description>
    <inlineHelpText>Date the policy term commenced</inlineHelpText>
    <label>Policy Term Start Date</label>
    <type>DateTime</type>
</CustomField>