unpackaged/main/default/objects/InsurancePolicy/fields/Public_Liability__c.field-meta.xml
<CustomField>
    <fullName>Public_Liability__c</fullName>
    <label>Public Liability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>