unpackaged/main/default/objects/InsurancePolicy/fields/Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Date__c</fullName>
    <label>Quote Date</label>
    <type>DateTime</type>
</CustomField>