unpackaged/main/default/objects/InsurancePolicy/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <externalId>true</externalId>
    <label>Quote Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>