unpackaged/main/default/objects/InsurancePolicy/fields/Reference_UID__c.field-meta.xml
<CustomField>
    <fullName>Reference_UID__c</fullName>
    <label>Reference UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>