unpackaged/main/default/objects/InsurancePolicy/fields/Renewal_Count__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Count__c</fullName>
    <description>Counts how many times the policy has renewed consecutively
CDL field: RENEWALCOUNT</description>
    <inlineHelpText>Counts how many times the policy has renewed consecutively</inlineHelpText>
    <label>Renewal Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>