unpackaged/main/default/objects/InsurancePolicy/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Convertes Renewal Date date/time field to date only field</description>
    <formula>DATEVALUE( RenewalDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>