unpackaged/main/default/objects/InsurancePolicy/fields/Renewal_Review__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Review__c</fullName>
    <description>Description reason for a policy renewal review at the Renewal Invitation Stage and displays the reason for review
CDL field: RENEWALREVIEW_DESC</description>
    <inlineHelpText>Displays the reason for renewal review</inlineHelpText>
    <label>Renewal Review</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Addacs Advice Received</fullName>
            </value>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>CCJ&#39;s</fullName>
            </value>
            <value>
                <fullName>Claims Since Last Renewal</fullName>
            </value>
            <value>
                <fullName>Client Paid By Cheque Last Year</fullName>
            </value>
            <value>
                <fullName>Client Requested No Auto-Renewal</fullName>
            </value>
            <value>
                <fullName>D/D Book Cancelled Mid Term</fullName>
            </value>
            <value>
                <fullName>Deceased Policy Holder</fullName>
            </value>
            <value>
                <fullName>Manual Intervention at Renewal Always Required</fullName>
            </value>
            <value>
                <fullName>Mid Term Claims/Convictions to be added limited or no details on system</fullName>
            </value>
            <value>
                <fullName>Modifications</fullName>
            </value>
            <value>
                <fullName>MTA Since Last Renewal</fullName>
            </value>
            <value>
                <fullName>Non Motoring Convictions</fullName>
            </value>
            <value>
                <fullName>Other Reference Number with Claim/Conviction</fullName>
            </value>
            <value>
                <fullName>Outstanding Balance</fullName>
            </value>
            <value>
                <fullName>TP Card used once and not to be used again</fullName>
            </value>
            <value>
                <fullName>Vehicle Deemed Total Loss (No Change of Vehicle)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>