unpackaged/main/default/objects/InsurancePolicy/fields/TBXSRC__c.field-meta.xml
<CustomField>
    <fullName>TBXSRC__c</fullName>
    <label>TBXSRC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>