unpackaged/main/default/objects/InsurancePolicy/fields/Tool__c.field-meta.xml
<CustomField>
    <fullName>Tool__c</fullName>
    <label>Tools</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>