unpackaged/main/default/objects/InsurancePolicy/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <label>Trade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>