unpackaged/main/default/objects/InsurancePolicy/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <description>Online marketing campaign used to advertise
CDL field: USERFIELDCODE
RESPONSE</description>
    <label>UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>