unpackaged/main/default/objects/InsurancePolicy/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <description>Online marketing medium indicator
CDL field: USERFIELDCODE
RESPONSE</description>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>