unpackaged/main/default/objects/InsurancePolicy/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <description>Online marketing originator source
CDL field: USERFIELDCODE
RESPONSE</description>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>