unpackaged/main/default/objects/InsurancePolicy/listViews/Policies_that_are_scheduled_not_to_AR.listView-meta.xml
<ListView>
    <fullName>Policies_that_are_scheduled_not_to_AR</fullName>
    <columns>Insured_Contact__c</columns>
    <columns>Quote_Number__c</columns>
    <columns>Name</columns>
    <columns>RenewalDate</columns>
    <columns>PremiumAmount</columns>
    <columns>PolicyType</columns>
    <columns>NameInsured</columns>
    <columns>Cover_Level__c</columns>
    <columns>Status</columns>
    <columns>Trade__c</columns>
    <columns>Net_Premium__c</columns>
    <columns>Consent_to_Auto_Renew__c</columns>
    <columns>Auto_Renewal__c</columns>
    <columns>Affinity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>In The Renewal Cycle</value>
    </filters>
    <filters>
        <field>Consent_to_Auto_Renew__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Renewal_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:28</value>
    </filters>
    <label>Policies that are scheduled not to AR</label>
</ListView>